tests/files/lexer_tests/should_fail/005.cmdr
// Illegal character in string (ascii 5)
var = '';